# CPA

Projeto/: CMakeLists.txt
Projeto/state_machine/src/: state_machine.c  test_1.c
TrabalhoCPA/: LEIAME.txt  Parte2_Codigo.m  parte3_link.txt
TrabalhoCPA/Parte1_Codigo/state_machine/inc/: state_machine.h
lista1a/: CMakeLists.txt  README.txt  main.cpp  q1_lista1a.cpp  q2_lista1a.cpp  q3_lista1a.cpp
trabalho/: CMakeLists.txt  main.cpp
